...
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StudyOptionTitle"
        app:layout_constraintVertical_bias="0.387" />

    <Button
        android:id="@+id/button_UniList"
        android:layout_width="294dp"
        android:layout_height="38dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/aclonica"
        android:text="@string/listOfUni"
        android:textColor="@color/White"
...
