<?xml version="1.0" encoding="utf-8"?>
<LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toTopOf="parent"
    android:orientation="vertical">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Black"
        app:tabSelectedTextColor="#EFE43B"
        app:tabTextColor="@color/White"

        >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabViewId_life"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Life" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabViewId_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Work" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/mapAPI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Map"
            />


    </com.google.android.material.tabs.TabLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>