...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">


    <ImageButton
        android:id="@+id/imgVisa"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:padding="0dp"
        android:scaleType="centerCrop"
...
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/livingInDk_Visas"
        app:layout_constraintVertical_bias="0.007" />

    <ImageButton
        android:id="@+id/imgHealth"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:padding="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/health"
...
